force-app/main/default/objects/Clima__c/Clima__c.object-meta.xml
<CustomObject>
    <description>Condición atmosférica propia de la ubicación de un aeropuerto en un intervalo de tiempo determinado.</description>
    <label>Clima</label>
    <nameField>
        <displayFormat>C-{000000}</displayFormat>
        <label>Nombre de Clima</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Climas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>