force-app/main/default/objects/Clima__c/fields/Fecha_y_hora_de_prediccion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_y_hora_de_prediccion__c</fullName>
    <description>Día, mes, año y hora en la que se hizo la predicción del clima para un aeropuerto</description>
    <label>Fecha y hora de predicción</label>
    <type>DateTime</type>
</CustomField>