force-app/main/default/objects/Clima__c/fields/Temperatura__c.field-meta.xml
<CustomField>
    <fullName>Temperatura__c</fullName>
    <description>Medición de calor o frío del aire en un aeropuerto y momento determinado</description>
    <label>Temperatura</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>