force-app/main/default/objects/Clima__c/fields/Unidad__c.field-meta.xml
<CustomField>
    <fullName>Unidad__c</fullName>
    <description>Escala de medida de la temperatura</description>
    <label>Unidad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Centigrados</fullName>
            </value>
            <value>
                <fullName>Fahrenheit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>